complete the shared feature and sharedfeaturegen to select the feature into the field data create then config json and fix duplicate create problem

--- a/devops/docker-compose/docker-compose.yml
+++ b/devops/docker-compose/docker-compose.yml
@@ -318,6 +318,7 @@ services:
     env_file: ../../.env
     depends_on:
       - mongo
+      - apigateway
   
   sefnodegenmanager:
     build: ../../generator/services/sef-node-gen-manager
