--- a/application/clients/desktopV2/package.json
+++ b/application/clients/desktopV2/package.json
@@ -59,6 +59,7 @@
         "styled-components": "^5.3.3",
         "toastr": "^2.1.4",
         "tslib": "^2.2.0",
+        "tui-image-editor": "^3.15.2",
         "zone.js": "~0.11.4"
     },
     "devDependencies": {
