--- a/generator/services/seed/sharedfeatures/wcmxgrapesjsmanager/gepfeatureconfig.json
+++ b/generator/services/seed/sharedfeatures/wcmxgrapesjsmanager/gepfeatureconfig.json
@@ -35,7 +35,7 @@
         "term": "",
         "comments": "best effort support"
     },
-    "primary_entity": "wcmx_grapesjs",
+    "primary_entity": { "entity": "wcmx_grapesjs" },
     "secondary_entities": [
         "tags"
     ],
