wizard CRUD done

--- a/.env
+++ b/.env
@@ -21,6 +21,7 @@ menubuildermanager=http://menubuildermanager
 templatemanager=http://templatemanager
 securitymanager=http://securitymanager
 sharedfeaturesmanager=http://sharedfeaturesmanager
+wizardmanager=http://wizardmanager
 sharedfeaturesgenmanager=http://sharedfeaturesgenmanager
 camundasvc=http://camundasvc
 clonemanager=http://clonemanager
