--- a/application/clients/desktopV2/package.json
+++ b/application/clients/desktopV2/package.json
@@ -32,7 +32,7 @@
         "angular-i18next": "^10.3.0",
         "angular-material": "^1.2.3",
         "bootstrap": "^5.0.2",
-        "grapesjs": "^0.18.3",
+        "grapesjs": "^0.18.4",
         "grapesjs-accordion": "^1.0.10",
         "grapesjs-blocks-flexbox": "^0.1.1",
         "grapesjs-custom-code": "^0.1.3",
@@ -40,6 +40,7 @@
         "grapesjs-plugin-ckeditor": "^0.0.10",
         "grapesjs-plugin-filestack": "^0.1.1",
         "grapesjs-plugin-forms": "^2.0.1",
+        "grapesjs-plugin-toolbox": "^1.0.12",
         "grapesjs-preset-webpage": "^0.1.11",
         "grapesjs-style-bg": "^1.0.5",
         "grapesjs-tabs": "^1.0.6",
